--- a/src/app/components/formatteurheader/formatteurheader.component.html
+++ b/src/app/components/formatteurheader/formatteurheader.component.html
@@ -373,48 +373,13 @@
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle arrow-none" href="#" id="topnav-pages" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <i class="uil-copy-alt me-1"></i>Pages <div class="arrow-down"></div>
+                            <i class="uil-copy-alt me-1"></i>Depot <div class="arrow-down"></div>
                         </a>
                         <div class="dropdown-menu" aria-labelledby="topnav-pages">
+                           
                             <div class="dropdown">
-                                <a class="dropdown-item dropdown-toggle arrow-none" href="#" id="topnav-auth" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Authenitication <div class="arrow-down"></div>
-                                </a>
-                                <div class="dropdown-menu" aria-labelledby="topnav-auth">
-                                    <a href="pages-login.html" class="dropdown-item">Login</a>
-                                    <a href="pages-login-2.html" class="dropdown-item">Login 2</a>
-                                    <a href="pages-register.html" class="dropdown-item">Register</a>
-                                    <a href="pages-register-2.html" class="dropdown-item">Register 2</a>
-                                    <a href="pages-logout.html" class="dropdown-item">Logout</a>
-                                    <a href="pages-logout-2.html" class="dropdown-item">Logout 2</a>
-                                    <a href="pages-recoverpw.html" class="dropdown-item">Recover Password</a>
-                                    <a href="pages-recoverpw-2.html" class="dropdown-item">Recover Password 2</a>
-                                    <a href="pages-lock-screen.html" class="dropdown-item">Lock Screen</a>
-                                    <a href="pages-lock-screen-2.html" class="dropdown-item">Lock Screen 2</a>
-                                    <a href="pages-confirm-mail.html" class="dropdown-item">Confirm Mail</a>
-                                    <a href="pages-confirm-mail-2.html" class="dropdown-item">Confirm Mail 2</a>
-                                </div>
                             </div>
-                            <div class="dropdown">
-                                <a class="dropdown-item dropdown-toggle arrow-none" href="#" id="topnav-error" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Error <div class="arrow-down"></div>
-                                </a>
-                                <div class="dropdown-menu" aria-labelledby="topnav-error">
-                                    <a href="pages-404.html" class="dropdown-item">Error 404</a>
-                                    <a href="pages-404-alt.html" class="dropdown-item">Error 404-alt</a>
-                                    <a href="pages-500.html" class="dropdown-item">Error 500</a>
-                                </div>
-                            </div>
-                            <a href="pages-starter.html" class="dropdown-item">Starter Page</a>
-                            <a href="pages-preloader.html" class="dropdown-item">With Preloader</a>
-                            <a href="pages-profile.html" class="dropdown-item">Profile</a>
-                            <a href="pages-profile-2.html" class="dropdown-item">Profile 2</a>
-                            <a href="pages-invoice.html" class="dropdown-item">Invoice</a>
-                            <a href="pages-faq.html" class="dropdown-item">FAQ</a>
-                            <a href="pages-pricing.html" class="dropdown-item">Pricing</a>
-                            <a href="pages-maintenance.html" class="dropdown-item">Maintenance</a>
-                            <a href="pages-timeline.html" class="dropdown-item">Timeline</a>
-                            <a href="landing.html" class="dropdown-item">Landing</a>
+                            <a routerLink="depotformatteur" class="dropdown-item">Consulter les comptes rendus recu</a>
                         </div>
                     </li>
                     <li class="nav-item dropdown">
