--- a/src/app/components/loginsignup/loginsignup.component.html
+++ b/src/app/components/loginsignup/loginsignup.component.html
@@ -42,16 +42,11 @@
                                     <label class="form-check-label" for="checkbox-signin">Remember me</label>
                                 </div>
                             </div>
-                            
-                            <div class="mb-3 mb-0 text-left">
-                                <button class="btn btn-primary" (click)="loginadmin()" type="submit" > Admin </button>
-                            </div>
+                            <br>
                             <div class="mb-3 mb-0 text-center" style="margin-top: -62px;margin-left: -30px;" >
-                                <button class="btn btn-primary" (click)="loginetudiant()" type="submit"> Etudiant </button>
+                                <button class="btn btn-primary" (click)="login()" type="submit"> Login </button>
                             </div>
-                            <div class="mb-3 mb-0 text-center" style="margin-left: 250px; margin-top: -62px;">
-                                <button class="btn btn-primary"(click)="loginformatteur()" type="submit"> Formatteur </button>
-                            </div>
+                           
                             
                             
 
