--- a/src/app/components/adminsidebar/adminsidebar.component.html
+++ b/src/app/components/adminsidebar/adminsidebar.component.html
@@ -140,6 +140,21 @@
                     </ul>
                 </div>
             </li>
+            <li class="side-nav-item">
+                <a data-bs-toggle="collapse" href="#sidebarPages" aria-expanded="false" aria-controls="sidebarPages" class="side-nav-link">
+                    <i class="uil-window"></i>
+                    <span> Gestion des Feedbacks </span>
+                    <span class="menu-arrow"></span>
+                </a>
+                <div class="collapse" id="sidebarPages">
+                    <ul class="side-nav-second-level">
+                        <li>
+                            <a routerLink="touslesfeedbacks">Consulter tout les feedbacks</a>
+                        </li>
+
+                    </ul>
+                </div>
+            </li>
         </ul>
 
 
