--- a/src/app/components/questionsetreponses/questionsetreponses.component.html
+++ b/src/app/components/questionsetreponses/questionsetreponses.component.html
@@ -45,7 +45,9 @@
     <div class="card">
         <div class="card-body pb-1">
             <div class="d-flex">
-                <img class="me-2 rounded"[src]=" endpoint.url + 'getimage/' + i.formatteur[0].image" alt="Generic placeholder image" height="32">
+                <img *ngIf="i.formatteur.length>0"  class="me-2 rounded"[src]=" endpoint.url + 'getimage/' + i.formatteur[0].image" alt="Generic placeholder image" height="32">
+                <img *ngIf="i.etudiant.length>0"  class="me-2 rounded"[src]=" endpoint.url + 'getimage/' + i.etudiant[0].image" alt="Generic placeholder image" height="32">
+                
                 <div class="w-100">
                     <div class="dropdown float-end text-muted">
                         <a href="#" class="dropdown-toggle arrow-none card-drop"
@@ -53,7 +55,9 @@
                             <i class="mdi mdi-dots-horizontal"></i>
                         </a>
                     </div>
-                    <h5 class="m-0"> {{i.formatteur[0].name }}  {{i.formatteur[0].lastname }}</h5>
+                    <h5 class="m-0" *ngIf="i.formatteur.length>0"> {{i.formatteur[0].name }}  {{i.formatteur[0].lastname }}</h5>
+                    
+                    <h5 class="m-0" *ngIf="i.etudiant.length>0"> {{i.etudiant[0].name }}  {{i.etudiant[0].lastname }}</h5>
                     <h4 style="color: brown;">Titre de la question : {{i.title}} </h4>
                     
                 </div>
@@ -73,12 +77,16 @@
             <h4 style="color: black;">Reponses</h4>
 
             <div class="mt-3">
-               <ng-container *ngIf="i.Reponse.length>0 && i.Reponse[0].formatteur.length>0">
+               <ng-container *ngIf="i.Reponse.length>0">
                 <div class="d-flex" *ngFor="let rep of i.Reponse">
-                    <img class="me-2 rounded" [src]=" endpoint.url + 'getimage/' + rep.formatteur[0].image" alt="Generic placeholder image" height="32">
+                    <img *ngIf="rep.formatteur.length>0"  class="me-2 rounded"[src]=" endpoint.url + 'getimage/' + rep.formatteur[0].image" alt="Generic placeholder image" height="32">
+                    <img *ngIf="rep.etudiant.length>0"  class="me-2 rounded"[src]=" endpoint.url + 'getimage/' + rep.etudiant[0].image" alt="Generic placeholder image" height="32">
+                    
                     <div>
-                        <h5 class="m-0">{{rep.formatteur[0].name}} {{rep.formatteur[0].lastname}}</h5>
-                       
+                        <h5 class="m-0" *ngIf="rep.formatteur.length>0"> {{rep.formatteur[0].name }}  {{rep.formatteur[0].lastname }}</h5>
+                
+                        <h5 class="m-0" *ngIf="rep.etudiant.length>0"> {{rep.etudiant[0].name }}  {{rep.etudiant[0].lastname }}</h5>
+                      
 
                         <p class="my-1">{{rep.description}}</p>
 
