--- a/src/app/components/depotformatteur/depotformatteur.component.html
+++ b/src/app/components/depotformatteur/depotformatteur.component.html
@@ -14,7 +14,7 @@
 
 
 
-        <button style="position: relative;left: 400px;" type="button" class="btn btn-primary" data-bs-toggle="modal"
+        <button (click)="verifierdepot(i._id)"style="position: relative;left: 400px;" type="button" class="btn btn-primary" data-bs-toggle="modal"
             data-bs-target="#primary-header-modal">Verifier et ajouter des remarques</button>
         <div id="primary-header-modal" class="modal fade" tabindex="-1" role="dialog"
             aria-labelledby="primary-header-modalLabel" aria-hidden="true">
