--- a/src/app/components/etudiantheader/etudiantheader.component.html
+++ b/src/app/components/etudiantheader/etudiantheader.component.html
@@ -317,58 +317,10 @@
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle arrow-none" href="#" id="topnav-apps" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <i class="uil-apps me-1"></i>Apps <div class="arrow-down"></div>
+                            <i class="uil-apps me-1"></i>Calendrier <div class="arrow-down"></div>
                         </a>
                         <div class="dropdown-menu" aria-labelledby="topnav-apps">
-                            <a href="apps-calendar.html" class="dropdown-item">Calendar</a>
-                            <a href="apps-chat.html" class="dropdown-item">Chat</a>
-                            <div class="dropdown">
-                                <a class="dropdown-item dropdown-toggle arrow-none" href="#" id="topnav-ecommerce" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Ecommerce <div class="arrow-down"></div>
-                                </a>
-                                <div class="dropdown-menu" aria-labelledby="topnav-ecommerce">
-                                    <a href="apps-ecommerce-products.html" class="dropdown-item">Products</a>
-                                    <a href="apps-ecommerce-products-details.html" class="dropdown-item">Products Details</a>
-                                    <a href="apps-ecommerce-orders.html" class="dropdown-item">Orders</a>
-                                    <a href="apps-ecommerce-orders-details.html" class="dropdown-item">Order Details</a>
-                                    <a href="apps-ecommerce-customers.html" class="dropdown-item">Customers</a>
-                                    <a href="apps-ecommerce-shopping-cart.html" class="dropdown-item">Shopping Cart</a>
-                                    <a href="apps-ecommerce-checkout.html" class="dropdown-item">Checkout</a>
-                                    <a href="apps-ecommerce-sellers.html" class="dropdown-item">Sellers</a>
-                                </div>
-                            </div>
-                            <div class="dropdown">
-                                <a class="dropdown-item dropdown-toggle arrow-none" href="#" id="topnav-email" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Email <div class="arrow-down"></div>
-                                </a>
-                                <div class="dropdown-menu" aria-labelledby="topnav-email">
-                                    <a href="apps-email-inbox.html" class="dropdown-item">Inbox</a>
-                                    <a href="apps-email-read.html" class="dropdown-item">Read Email</a>
-                                </div>
-                            </div>
-                            <div class="dropdown">
-                                <a class="dropdown-item dropdown-toggle arrow-none" href="#" id="topnav-project" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Projects <div class="arrow-down"></div>
-                                </a>
-                                <div class="dropdown-menu" aria-labelledby="topnav-project">
-                                    <a href="apps-projects-list.html" class="dropdown-item">List</a>
-                                    <a href="apps-projects-details.html" class="dropdown-item">Details</a>
-                                    <a href="apps-projects-gantt.html" class="dropdown-item">Gantt</a>
-                                    <a href="apps-projects-add.html" class="dropdown-item">Create Project</a>
-                                </div>
-                            </div>
-                            <a href="apps-social-feed.html" class="dropdown-item">Social Feed</a>
-                            <div class="dropdown">
-                                <a class="dropdown-item dropdown-toggle arrow-none" href="#" id="topnav-tasks" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Tasks <div class="arrow-down"></div>
-                                </a>
-                                <div class="dropdown-menu" aria-labelledby="topnav-tasks">
-                                    <a href="apps-tasks.html" class="dropdown-item">List</a>
-                                    <a href="apps-tasks-details.html" class="dropdown-item">Details</a>
-                                    <a href="apps-kanban.html" class="dropdown-item">Kanban Board</a>
-                                </div>
-                            </div>
-                            <a href="apps-file-manager.html" class="dropdown-item">File Manager</a>
+                            <a [routerLink]="['/etudiantdashboard']" class="dropdown-item">Calendrier</a>
                         </div>
                     </li>
                     <li class="nav-item dropdown">
