--- a/src/app/components/formatteurheader/formatteurheader.component.html
+++ b/src/app/components/formatteurheader/formatteurheader.component.html
@@ -384,113 +384,10 @@
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle arrow-none" href="#" id="topnav-components" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <i class="uil-package me-1"></i>Components <div class="arrow-down"></div>
+                            <i class="uil-package me-1"></i>Calendrier <div class="arrow-down"></div>
                         </a>
                         <div class="dropdown-menu" aria-labelledby="topnav-components">
-                            <a href="widgets.html" class="dropdown-item">Widgets</a>
-                            <div class="dropdown">
-                                <a class="dropdown-item dropdown-toggle arrow-none" href="#" id="topnav-ui-kit" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Base UI 1 <div class="arrow-down"></div>
-                                </a>
-                                <div class="dropdown-menu" aria-labelledby="topnav-ui-kit">
-                                    <a href="ui-accordions.html" class="dropdown-item">Accordions</a>
-                                    <a href="ui-alerts.html" class="dropdown-item">Alerts</a>
-                                    <a href="ui-avatars.html" class="dropdown-item">Avatars</a>
-                                    <a href="ui-badges.html" class="dropdown-item">Badges</a>
-                                    <a href="ui-breadcrumb.html" class="dropdown-item">Breadcrumb</a>
-                                    <a href="ui-buttons.html" class="dropdown-item">Buttons</a>
-                                    <a href="ui-cards.html" class="dropdown-item">Cards</a>
-                                    <a href="ui-carousel.html" class="dropdown-item">Carousel</a>
-                                    <a href="ui-dropdowns.html" class="dropdown-item">Dropdowns</a>
-                                    <a href="ui-embed-video.html" class="dropdown-item">Embed Video</a>
-                                    <a href="ui-grid.html" class="dropdown-item">Grid</a>
-                                    <a href="ui-list-group.html" class="dropdown-item">List Group</a>
-                                </div>
-                            </div>
-                            <div class="dropdown">
-                                <a class="dropdown-item dropdown-toggle arrow-none" href="#" id="topnav-ui-kit2" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Base UI 2 <div class="arrow-down"></div>
-                                </a>
-                                <div class="dropdown-menu" aria-labelledby="topnav-ui-kit2">
-                                    <a href="ui-modals.html" class="dropdown-item">Modals</a>
-                                    <a href="ui-notifications.html" class="dropdown-item">Notifications</a>
-                                    <a href="ui-offcanvas.html" class="dropdown-item">Offcanvas</a>
-                                    <a href="ui-placeholders.html" class="dropdown-item">Placeholders</a>
-                                    <a href="ui-pagination.html" class="dropdown-item">Pagination</a>
-                                    <a href="ui-popovers.html" class="dropdown-item">Popovers</a>
-                                    <a href="ui-progress.html" class="dropdown-item">Progress</a>
-                                    <a href="ui-ribbons.html" class="dropdown-item">Ribbons</a>
-                                    <a href="ui-spinners.html" class="dropdown-item">Spinners</a>
-                                    <a href="ui-tabs.html" class="dropdown-item">Tabs</a>
-                                    <a href="ui-tooltips.html" class="dropdown-item">Tooltips</a>
-                                    <a href="ui-typography.html" class="dropdown-item">Typography</a>
-                                </div>
-                            </div>
-                            <div class="dropdown">
-                                <a class="dropdown-item dropdown-toggle arrow-none" href="#" id="topnav-extended-ui" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Extended UI <div class="arrow-down"></div>
-                                </a>
-                                <div class="dropdown-menu" aria-labelledby="topnav-extended-ui">
-                                    <a href="extended-dragula.html" class="dropdown-item">Dragula</a>
-                                    <a href="extended-range-slider.html" class="dropdown-item">Range Slider</a>
-                                    <a href="extended-ratings.html" class="dropdown-item">Ratings</a>
-                                    <a href="extended-scrollbar.html" class="dropdown-item">Scrollbar</a>
-                                    <a href="extended-scrollspy.html" class="dropdown-item">Scrollspy</a>
-                                    <a href="extended-treeview.html" class="dropdown-item">Treeview</a>
-                                </div>
-                            </div>
-                            <div class="dropdown">
-                                <a class="dropdown-item dropdown-toggle arrow-none" href="#" id="topnav-forms" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Forms <div class="arrow-down"></div>
-                                </a>
-                                <div class="dropdown-menu" aria-labelledby="topnav-forms">
-                                    <a href="form-elements.html" class="dropdown-item">Basic Elements</a>
-                                    <a href="form-advanced.html" class="dropdown-item">Form Advanced</a>
-                                    <a href="form-validation.html" class="dropdown-item">Validation</a>
-                                    <a href="form-wizard.html" class="dropdown-item">Wizard</a>
-                                    <a href="form-fileuploads.html" class="dropdown-item">File Uploads</a>
-                                    <a href="form-editors.html" class="dropdown-item">Editors</a>
-                                </div>
-                            </div>
-                            <div class="dropdown">
-                                <a class="dropdown-item dropdown-toggle arrow-none" href="#" id="topnav-charts" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Charts <div class="arrow-down"></div>
-                                </a>
-                                <div class="dropdown-menu" aria-labelledby="topnav-charts">
-                                    <a href="charts-chartjs.html" class="dropdown-item">Chartjs</a>
-                                    <a href="charts-brite.html" class="dropdown-item">Britecharts</a>
-                                    <a href="charts-apex-line.html" class="dropdown-item">Apex Charts</a>
-                                    <a href="charts-sparkline.html" class="dropdown-item">Sparklines</a>
-                                </div>
-                            </div>
-                            <div class="dropdown">
-                                <a class="dropdown-item dropdown-toggle arrow-none" href="#" id="topnav-tables" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Tables <div class="arrow-down"></div>
-                                </a>
-                                <div class="dropdown-menu" aria-labelledby="topnav-tables">
-                                    <a href="tables-basic.html" class="dropdown-item">Basic Tables</a>
-                                    <a href="tables-datatable.html" class="dropdown-item">Data Tables</a>
-                                </div>
-                            </div>
-                            <div class="dropdown">
-                                <a class="dropdown-item dropdown-toggle arrow-none" href="#" id="topnav-icons" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Icons <div class="arrow-down"></div>
-                                </a>
-                                <div class="dropdown-menu" aria-labelledby="topnav-icons">
-                                    <a href="icons-dripicons.html" class="dropdown-item">Dripicons</a>
-                                    <a href="icons-mdi.html" class="dropdown-item">Material Design</a>
-                                    <a href="icons-unicons.html" class="dropdown-item">Unicons</a>
-                                </div>
-                            </div>
-                            <div class="dropdown">
-                                <a class="dropdown-item dropdown-toggle arrow-none" href="#" id="topnav-maps" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Maps <div class="arrow-down"></div>
-                                </a>
-                                <div class="dropdown-menu" aria-labelledby="topnav-maps">
-                                    <a href="maps-google.html" class="dropdown-item">Google Maps</a>
-                                    <a href="maps-vector.html" class="dropdown-item">Vector Maps</a>
-                                </div>
-                            </div>
+                            <a [routerLink]="['/formatteurdashboard']" class="dropdown-item">Calendrier</a>
                         </div>
                     </li>
 
