--- a/src/app/components/ajouterformation/ajouterformation.component.html
+++ b/src/app/components/ajouterformation/ajouterformation.component.html
@@ -23,7 +23,7 @@
         </div>
         <div class="mb-3">
             <label class="form-label" for="validationCustom03">date</label>
-            <input type="datetime" [(ngModel)]="Formationnew.date" [ngModelOptions]="{standalone: true}" type="text"
+            <input type="date" [(ngModel)]="Formationnew.date" [ngModelOptions]="{standalone: true}" type="date"
                 class="form-control" id="validationCustom03" placeholder="date" required>
         </div>
         <div class="mb-3">
