--- a/src/app/components/adminsidebar/adminsidebar.component.html
+++ b/src/app/components/adminsidebar/adminsidebar.component.html
@@ -13,34 +13,9 @@
         <!--- Sidemenu -->
         <ul class="side-nav">
 
-            <li class="side-nav-title side-nav-item">Navigation</li>
+            <li class="side-nav-title side-nav-item">Barre de Navigation</li>
 
-            <li class="side-nav-item">
-                <a data-bs-toggle="collapse" href="#sidebarDashboards" aria-expanded="false"
-                    aria-controls="sidebarDashboards" class="side-nav-link">
-                    <i class="uil-home-alt"></i>
-                    <span class="badge bg-success float-end"></span>
-                    <span> Dashboards </span>
-                </a>
-                <div class="collapse" id="sidebarDashboards">
-                    <ul class="side-nav-second-level">
-                        <li>
-                            <a href="dashboard-analytics.html">Analytics</a>
-                        </li>
-                        <li>
-                            <a href="dashboard-crm.html">CRM</a>
-                        </li>
-                        <li>
-                            <a href="index.html">Ecommerce</a>
-                        </li>
-                        <li>
-                            <a href="dashboard-projects.html">Projects</a>
-                        </li>
-                    </ul>
-                </div>
-            </li>
-
-            <li class="side-nav-title side-nav-item">Gestion</li>
+           
 
 
             <li class="side-nav-item">
@@ -53,16 +28,7 @@
                 <div class="collapse" id="sidebarEcommerce">
                     <ul class="side-nav-second-level">
                         <li>
-                            <a href="apps-ecommerce-products.html">charts</a>
-                        </li>
-                        <li>
-                            <a href="apps-ecommerce-products-details.html">Nombre de Formations</a>
-                        </li>
-                        <li>
-                            <a href="apps-ecommerce-orders.html">Nombre d'etudiants</a>
-                        </li>
-                        <li>
-                            <a href="apps-ecommerce-orders-details.html">Nombre de Formateurs</a>
+                            <a routerLink="statistiques">Statistiques</a>
                         </li>
                     </ul>
                 </div>
