--- a/src/app/components/depotformatteur/depotformatteur.component.html
+++ b/src/app/components/depotformatteur/depotformatteur.component.html
@@ -1,5 +1,12 @@
 <h3>Les comptes rendus recu</h3>
 <br>
+<label for="simpleinput" class="form-label">Choisir la formation concerné : </label>
+        <div class="input-group mb-3">
+            <label class="input-group-text" for="inputGroupSelect01">Options</label>
+            <select    class="form-select" id="inputGroupSelect01">
+                <option (click)="filterItem(i.title)" *ngFor="let i of formation">{{i.title}} </option>
+            </select>
+        </div>
 
 <div class="row align-items-center" *ngFor="let i of travailpourformatteur">
     <div class="col-auto">
