--- a/src/app/components/formatteurdashboard/formatteurdashboard.component.html
+++ b/src/app/components/formatteurdashboard/formatteurdashboard.component.html
@@ -1,7 +1,8 @@
 <app-formatteurheader></app-formatteurheader>
 
 
-<div class="row mt-5" style="background-color: rgba(243, 243, 243, 0.568);">
+<div class="row mt-2" style="background-color: rgba(243, 243, 243, 0.568);">
+    
     <div class="col-3">
     <app-formatteursidebar></app-formatteursidebar>
 
@@ -10,6 +11,7 @@
     <div class="col-9">
         <router-outlet></router-outlet>
     </div>
+    <app-footer></app-footer>
 </div>
 
 
