--- a/src/app/components/modifierformation/modifierformation.component.html
+++ b/src/app/components/modifierformation/modifierformation.component.html
@@ -15,7 +15,7 @@
         </div>
         <div class="mb-3">
             <label class="form-label" for="validationCustom03">date</label>
-            <input [(ngModel)]="Formationnew.date" [ngModelOptions]="{standalone: true}" type="text"
+            <input [(ngModel)]="Formationnew.date" [ngModelOptions]="{standalone: true}" type="date"
                 class="form-control" id="validationCustom03" placeholder="date" required>
         </div>
         <div class="mb-3">
